--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <img class="img-fluid" src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/hand2.png"
+        <img class="img-fluid" src="imgs/hand2.png"
           alt="">
       </div>
     </div>
@@ -63,7 +63,7 @@
   <section class="container-fluid px-0 content">
     <div class="row align-items-center">
       <div class="col-md-6 order-2 order-md-1">
-        <img class="img-fluid" src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/milk.png"
+        <img class="img-fluid" src="imgs/milk.png"
           alt="">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
@@ -71,7 +71,7 @@
           <div class="col-10 col-lg-8 mb-5 mb-md-0">
             <h2 id="container2-h2">MUSEUM OF CANDY</h2>
             <img class="img-fluid d-none d-lg-inline"
-              src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/lolli_icon.png" alt="">
+              src="imgs/lolli_icon.png" alt="">
             <p class="lead" id="container2-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iure vel
               iusto consequatur quasi rem deserunt dicta quaerat magnam ducimus voluptate non, voluptas fuga, at
               laudantium laborum sunt repudiandae libero.
@@ -91,7 +91,7 @@
           <div class="col-10 col-lg-8 mb-5 mb-md-0">
             <h2 id="container2-h2">MUSEUM OF CANDY</h2>
             <img class="img-fluid d-none d-lg-inline"
-              src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/lolli_icon.png" alt="">
+              src="imgs/lolli_icon.png" alt="">
             <p class="lead" id="container2-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iure vel
               iusto consequatur quasi rem deserunt dicta quaerat magnam ducimus voluptate non, voluptas fuga, at
               laudantium laborum sunt repudiandae libero.
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img class="img-fluid" src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/gumball.png"
+        <img class="img-fluid" src="imgs/gumball.png"
           alt="">
       </div>
     </div>
@@ -111,7 +111,7 @@
   <section class="container-fluid px-0 content">
     <div class="row align-items-center">
       <div class="col-md-6 order-2 order-md-1">
-        <img class="img-fluid" src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/sprinkles.png"
+        <img class="img-fluid" src="imgs/sprinkles.png"
           alt="">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
@@ -119,7 +119,7 @@
           <div class="col-10 col-lg-8 mb-5 mb-md-0">
             <h2 id="container2-h2">MUSEUM OF CANDY</h2>
             <img class="img-fluid d-none d-lg-inline"
-              src="/Users/mas/Downloads/Bootstrap4_Code/13_Museum_Of_Candy/Starter/imgs/lolli_icon.png" alt="">
+              src="imgs/lolli_icon.png" alt="">
             <p class="lead" id="container2-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iure vel
               iusto consequatur quasi rem deserunt dicta quaerat magnam ducimus voluptate non, voluptas fuga, at
               laudantium laborum sunt repudiandae libero.
